--- a/ndex.html
+++ b/ndex.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
+    <title>Robert Highsmith Portfolio</title>
 </head>
 <body>
     <div class="navbar"></div>
