--- a/ndex.html
+++ b/ndex.html
@@ -43,6 +43,13 @@
                 <button class="btn btn--secondary">See My Portfolio</button>
             </div>
         </div>
+
+        <div class="hero__socials">
+            <a href="#"><i class="ri-instagram-fill"></i></a>
+            <a href="#"><i class="ri-linkedin-box-fill"></i>
+            <a href="#"><i class="ri-github-fill"></i></i></a>
+        </div>
+
     </section>
     
 </body>
