--- a/ndex.html
+++ b/ndex.html
@@ -31,7 +31,7 @@
 
     <section class="hero">
         <div class="hero__content">
-            <img src="" alt="Profile Image" class="hero__image">
+            <img src="Assets/IMG_9557.jpg" alt="Profile Image" class="hero__image">
             <h2>Hello! My name is Robert Highsmith</h2>
         </div>
 
